backend - configuração do login (usuario, nivel de acesso, spring security, jwt)
A autenticação é gerenciada por meio do Spring Security. Usuários ADM podem realizar POST e os usuários COMUNS precisam estar autenticados para realizar uma requisição GET por exemplo.

O Token JWT é gerado no login, e tem uma duração de 2 horas, esse token é passado como um Header de Authorization Bearer.

--- a/server/backend/src/main/resources/application.yml
+++ b/server/backend/src/main/resources/application.yml
@@ -1,6 +1,11 @@
 server:
   port: 8080
 
+api:
+  security:
+    token:
+      secret: ${JWT_SECRET:controlu-secret-key}
+
 spring:
   application:
     name: backend
@@ -16,3 +21,8 @@ spring:
       ddl-auto: none
     show-sql: false
 
+logging:
+  level:
+    org:
+      springframework:
+        security=DEBUG:
