--- a/web/web-controlu/package.json
+++ b/web/web-controlu/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.13.0",
     "@mui/icons-material": "^5.16.6",
     "@mui/material": "^5.16.6",
+    "@mui/styles": "^6.0.2",
     "@mui/x-charts": "^7.12.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
