--- a/server/backend/pom.xml
+++ b/server/backend/pom.xml
@@ -100,6 +100,14 @@
 			<artifactId>java-jwt</artifactId>
 			<version>4.4.0</version>
 		</dependency>
+
+		<!-- IText -->
+		<!-- https://central.sonatype.com/artifact/com.itextpdf/itext7-core -->
+		<dependency>
+			<groupId>com.itextpdf</groupId>
+			<artifactId>itext7-core</artifactId>
+			<version>8.0.5</version>
+		</dependency>
 	</dependencies>
 
 	<build>
