backend - ajustar o registro de horario em Acesso, Aula e Presenca e filtro relatorio ordem desc
ajustar o registro de horário em Acesso, Aula e Presenca
- o horário inicial, seja ele abertura ou entrada, são registrados diretamente pelo banco, por conta de uma configuração no campo da tabela
- ja o horário final, seja ele de saida ou fechamento, é atualizado  por meio de uma query nativa.

--- a/server/backend/src/main/resources/application.yml
+++ b/server/backend/src/main/resources/application.yml
@@ -10,7 +10,7 @@ spring:
   application:
     name: backend
   datasource:
-    url: jdbc:mysql://localhost:3306/db_controlu?useTimezone=true&serverTimezone=UTC
+    url: jdbc:mysql://localhost:3306/db_controlu
     driver-class-name: com.mysql.cj.jdbc.Driver
     username: root
     password: root
