--- a/mobile/leitor-controlu/package.json
+++ b/mobile/leitor-controlu/package.json
@@ -13,24 +13,24 @@
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.11.0",
     "axios": "^1.7.7",
-    "expo": "~51.0.38",
-    "expo-camera": "~15.0.16",
-    "expo-status-bar": "~1.12.1",
-    "react": "18.2.0",
-    "react-native": "0.74.5",
-    "react-native-safe-area-context": "4.10.5",
-    "react-native-screens": "3.31.1",
+    "expo": "^52.0.0",
+    "expo-camera": "~16.0.5",
+    "expo-status-bar": "~2.0.0",
+    "react": "18.3.1",
+    "react-native": "0.76.2",
+    "react-native-safe-area-context": "4.12.0",
+    "react-native-screens": "~4.1.0",
     "react-native-vector-icons": "^10.1.0",
-    "expo-face-detector": "~12.7.1",
-    "react-native-web": "~0.19.10",
-    "react-dom": "18.2.0",
-    "@expo/metro-runtime": "~3.2.3"
+    "expo-face-detector": "~13.0.1",
+    "react-native-web": "~0.19.13",
+    "react-dom": "18.3.1",
+    "@expo/metro-runtime": "~4.0.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0",
-    "@types/react": "~18.2.45",
+    "@babel/core": "^7.25.2",
+    "@types/react": "~18.3.12",
     "@types/react-native": "^0.73.0",
-    "typescript": "~5.3.3"
+    "typescript": "^5.3.3"
   },
   "private": true
 }
